scripts/nullness/annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8.txt
../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/interfaces/Model.java:5: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/models/ModelTD.java:9: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/interfaces/Model.java:28: error: cannot find symbol
	@Initializer public boolean register(Game g, Rack r){
	 ^
  symbol:   class Initializer
  location: class Model
../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/models/ModelTD.java:52: error: cannot find symbol
	@Initializer @Override
	 ^
  symbol:   class Initializer
  location: class ModelTD
Note: ../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/models/ModelKyle.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
4 errors
